corrected lazy load + fixed text colour on mobile loading ani

--- a/style.css
+++ b/style.css
@@ -174,27 +174,27 @@ li:hover {
 
 .init {
 	display: flex;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	position: fixed;
 	z-index: -1000;
 	top: 0;
 	background-color: white;
 	animation-name: init;
-	animation-duration: 2s;
+	animation-duration: 3s;
 	justify-content: center;
 	align-content: center;
 }
 
 .init-container {
 	height: auto;
-	mix-blend-mode: initial;
 	align-self: center;
 }
 
 .init p {
 	font-size: 10rem;
 	line-height: 10rem;
+	color: black;
 }
 
 .nav {
